--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,11 +127,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+ dexOptions {
+    javaMaxHeapSize "4g"
+  }
     defaultConfig {
         applicationId "com.elistaa"
         minSdkVersion rootProject.ext.minSdkVersion
+         missingDimensionStrategy 'react-native-camera', 'general'
         targetSdkVersion rootProject.ext.targetSdkVersion
+         multiDexEnabled true
         versionCode 1
         versionName "1.0"
     }
@@ -184,6 +188,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+ implementation project(':react-native-camera')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation project(':react-native-splash-screen')
